@@ -9,7 +9,7 @@ the DataMapper framework. The DataMapper API methods are shown below.</p>
 public function queryForObject($statementName, $parameter=null, $result=null);
 public function queryForList($statementName, $parameter=null, $result=null,
                                    $skip=-1, $max=-1);
-public function queryForPagedList($statementName, $parameter=null, $pageSize=10);
+public function queryForPagedList($statementName, $parameter=null, $pageSize=10, $page=0);
 public function queryForMap($statementName, $parameter=null,
                                    $keyProperty=null, $valueProperty=null);
 public function insert($statementName, $parameter=null)
@@ -78,7 +78,7 @@ point) and the maximum number to return.</p>
 
 <h2>QueryForPagedList</h2>
 <com:TTextHighlighter Language="php" CssClass="source">
- public function queryForPagedList($statementName, $parameter=null, $pageSize=10);
+ public function queryForPagedList($statementName, $parameter=null, $pageSize=10, $page);
 </com:TTextHighlighter>
 
 <p>We live in an age of information overflow. A database query often returns more
@@ -106,6 +106,14 @@ larger set that will be returned and thrown away. For very large sets, you may
 want to use a stored procedure or your own query that uses <tt>$skip</tt> and
 <tt>$max</tt> as parameters in <tt>queryForList</tt>.
 </div>
+
+<div class="tip"><b class="tip">Tip:</b>
+The <tt>$page</tt> parameter was introduced in 3.1.3. Before there was an additional
+query to always fetch the data for page 0 on object creation. Since this 
+might be a problem in performance critical situations with 3.1.2, you might be better 
+of also using <tt>queryForList</tt> with <tt>$skip</tt> and <tt>$max</tt> instead.
+</div>
+
 
 <h2>QueryForMap</h2>
 <com:TTextHighlighter Language="php" CssClass="source">
